add radio mode and Windows XP desktop enhancements